--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   },
   "homepage": "https://github.com/dante1977/easepack#readme",
   "dependencies": {
+    "commander": "^2.9.0",
+    "glob": "^7.1.1",
+    "tapable": "^0.2.6",
+    "webpack": "^2.2.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
