--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
   "dependencies": {
     "async": "^2.1.4",
     "commander": "^2.9.0",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.2",
     "glob": "^7.1.1",
+    "html-webpack-plugin": "^2.28.0",
     "tapable": "^0.2.6",
+    "vue-loader": "^10.2.1",
+    "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1"
   },
   "devDependencies": {
