--- a/package.json
+++ b/package.json
@@ -25,15 +25,21 @@
   "homepage": "https://github.com/dante1977/easepack#readme",
   "dependencies": {
     "async": "^2.1.4",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.4",
     "commander": "^2.9.0",
     "css-loader": "^0.26.1",
+    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.2",
     "file-loader": "^0.10.0",
     "glob": "^7.1.1",
+    "html-webpack-plugin": "^2.28.0",
     "node-sass": "^3.8.0",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^4.1.1",
-    "tapable": "^0.2.6",
+    "style-loader": "^0.13.1",
     "vue-loader": "^10.2.1",
+    "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^2.2.1"
   },
