--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "glob": "^7.1.1",
     "html-webpack-plugin": "^2.28.0",
     "node-sass": "^3.8.0",
+    "ora": "^1.1.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
