--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "file-loader": "^0.10.0",
     "glob": "^7.1.1",
     "html-webpack-plugin": "^2.28.0",
+    "loader-utils": "^0.2.16",
     "node-sass": "^3.8.0",
     "ora": "^1.1.0",
     "raw-loader": "^0.5.1",
@@ -42,7 +43,8 @@
     "vue-loader": "^10.2.1",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "ws": "^2.0.3"
   },
   "devDependencies": {
     "chai": "^3.5.0",
