--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "css-loader": "^0.26.1",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.2",
+    "fastparse": "^1.1.1",
     "file-loader": "^0.10.0",
     "glob": "^7.1.1",
     "html-webpack-plugin": "^2.28.0",
