--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "fastparse": "^1.1.1",
     "file-loader": "^0.10.0",
     "glob": "^7.1.1",
+    "imagemin": "^5.2.2",
+    "imagemin-pngquant": "^5.0.0",
     "loader-utils": "^0.2.16",
     "node-sass": "^3.8.0",
     "ora": "^1.1.0",
