--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "glob": "^7.1.1",
     "imagemin": "^5.2.2",
     "imagemin-pngquant": "^5.0.0",
+    "images": "^3.0.0",
+    "layout": "^2.2.0",
     "loader-utils": "^0.2.16",
     "node-sass": "^3.8.0",
     "ora": "^1.1.0",
