--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "preferGlobal": true,
   "main": "index.js",
   "scripts": {
+    "test": "npm run e2e:build",
     "e2e:build": "mocha test/e2e/test-build.js --timeout 60000"
   },
   "keywords": [
