--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "async": "^2.1.4",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.4",
+    "bytes": "^2.4.0",
     "commander": "^2.9.0",
     "css-loader": "^0.26.1",
     "express": "^4.14.1",
