--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "commander": "^2.9.0",
     "css-loader": "^0.26.1",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0-rc.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "fastparse": "^1.1.1",
     "file-loader": "^0.10.0",
     "glob": "^7.1.1",
