--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "async": "^2.1.4",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-stage-2": "^6.22.0",
     "bytes": "^2.4.0",
     "commander": "^2.9.0",
     "css-loader": "^0.26.1",
