--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/dante1977/easepack#readme",
   "dependencies": {
     "async": "^2.1.4",
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.24.0",
