--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "preferGlobal": true,
   "main": "index.js",
   "scripts": {
-    "test": "npm run e2e:build",
-    "e2e:build": "mocha test/e2e/test-build.js --timeout 60000"
+    "test": "test:unit && npm run e2e:build",
+    "e2e:build": "mocha test/e2e/test-build.js --timeout 60000",
+    "test:unit": "mocha test/e2e/test.js --compilers js:babel-core/register"
   },
   "keywords": [
     "cli",
