--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easepack",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "A simple CLI in a easy way to use, base on webpack",
   "preferGlobal": true,
   "main": "index.js",
@@ -46,7 +46,7 @@
     "imagemin-pngquant": "^5.0.0",
     "images": "^3.0.0",
     "layout": "^2.2.0",
-    "loader-utils": "0.2.16",
+    "loader-utils": "^0.2.16",
     "node-sass": "^3.13.1",
     "sass-loader": "^4.1.1",
     "vue-loader": "^10.2.1",
