--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easepack",
-  "version": "1.4.5",
+  "version": "1.5.0",
   "description": "A simple CLI in a easy way to use, base on webpack",
   "preferGlobal": true,
   "main": "index.js",
@@ -47,6 +47,7 @@
     "images": "^3.0.0",
     "layout": "^2.2.0",
     "loader-utils": "^0.2.16",
+    "lodash": "^4.17.4",
     "node-sass": "^4.5.2",
     "sass-loader": "^4.1.1",
     "vue-loader": "^10.2.1",
