--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "babel-preset-stage-2": "^6.22.0",
     "bytes": "^2.4.0",
     "commander": "^2.9.0",
+    "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.28.0",
+    "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "fastparse": "^1.1.1",
     "file-loader": "^0.10.0",
     "glob": "^7.1.1",
+    "http-proxy-middleware": "^0.17.4",
     "imagemin": "^5.2.2",
     "imagemin-pngquant": "^5.0.0",
     "images": "^3.0.0",
@@ -54,6 +57,8 @@
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "2.3.2",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.18.0",
     "webpack-sources": "^0.1.4",
     "ws": "^1.1.0"
   },
