--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easepack",
-  "version": "1.9.1",
+  "version": "1.9.2",
   "description": "A simple CLI in a easy way to use, base on webpack",
   "preferGlobal": true,
   "main": "index.js",
@@ -38,6 +38,7 @@
     "commander": "^2.9.0",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.28.0",
+    "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.1.0",
