--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,17 @@
 {
   "root": true,
   "parser": "babel-eslint",
+  "extends": "eslint:recommended",
+  "env": {
+    "node": true,
+    "browser": true
+  },
   "globals": {
+    "window": true,
+    "document": true
   },
   "rules": {
+    "no-console": 0,
     "no-useless-escape": 0
   }
 }
