--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "preferGlobal": true,
   "main": "index.js",
   "scripts": {
-    "lint": "eslint lib bin",
+    "lint": "eslint lib/plugins bin",
     "test": "npm run lint && npm run test:unit && npm run e2e:build",
     "e2e:init": "mocha test/e2e/test-init.js --timeout 60000",
     "e2e:build": "mocha test/e2e/test-build.js --timeout 60000",
