--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,20 @@
 {
   "root": true,
   "parser": "babel-eslint",
-  "extends": "eslint:recommended",
+  "extends": "standard",
   "env": {
     "node": true,
+    "mocha": true,
     "browser": true
   },
   "globals": {
-    "window": true,
-    "document": true
+    "easepack": true
   },
   "rules": {
+    "semi": 0,
+    "new-cap": 0,
     "no-console": 0,
-    "no-useless-escape": 0
+    "spaced-comment": 0,
+    "space-before-function-paren": 0
   }
 }
