--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "npm run lint && npm run test:unit && npm run e2e:build",
     "e2e:init": "mocha test/e2e/test-init.js --timeout 60000",
     "e2e:build": "mocha test/e2e/test-build.js --timeout 60000",
-    "test:unit": "mocha test/e2e/test.js --compilers js:babel-core/register"
+    "test:unit": "mocha test/e2e/test.js --compilers js:babel-core/register",
+    "test:karma": "karma start test/unit/karma.conf.js --single-run"
   },
   "keywords": [
     "cli",
@@ -75,6 +76,9 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "execa": "^0.6.0",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-mocha": "^1.3.0",
     "mocha": "^2.4.5",
     "rimraf": "^2.5.0"
   },
