--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "execa": "^0.6.0",
+    "get-stream": "^3.0.0",
     "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.1.1",
     "karma-mocha": "^1.3.0",
