--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "async": "^2.1.4",
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
     "bytes": "^2.4.0",
@@ -54,14 +54,14 @@
     "images": "^3.0.0",
     "karma-webpack": "^2.0.4",
     "layout": "^2.2.0",
-    "loader-utils": "^0.2.16",
+    "loader-utils": "^0.2.17",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.2",
     "sass-loader": "^4.1.1",
     "vue-loader": "^10.2.1",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
-    "webpack": "2.4.1",
+    "webpack": "^2.7.0",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-sources": "^0.1.4",
