--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "easepack",
   "version": "1.12.0",
+  "version:component": "1.0.0",
   "description": "A simple CLI in a easy way to use, base on webpack",
   "preferGlobal": true,
   "main": "index.js",
