rewirte read alias dir

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "easepack",
   "version": "1.12.1",
+  "version:component": "1.0.0",
   "description": "A simple CLI in a easy way to use, base on webpack",
   "preferGlobal": true,
   "main": "index.js",
@@ -85,6 +86,6 @@
     "rimraf": "^2.5.0"
   },
   "engines": {
-    "node": ">=4.4.7"
+    "node": ">=6.0.0"
   }
 }
