--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easepack",
-  "version": "1.12.1",
+  "version": "1.12.2",
   "description": "A simple CLI in a easy way to use, base on webpack",
   "preferGlobal": true,
   "main": "index.js",
@@ -56,8 +56,10 @@
     "layout": "^2.2.0",
     "loader-utils": "^0.2.17",
     "lodash": "^4.17.4",
+    "memory-fs": "^0.4.1",
     "node-sass": "^4.5.2",
     "sass-loader": "^4.1.1",
+    "scp2": "^0.5.0",
     "vue-loader": "^10.2.1",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.1.10",
