--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
     "http-proxy-middleware": "^0.17.4",
     "imagemin": "^5.2.2",
     "imagemin-pngquant": "^5.0.0",
-    "images": "3.0.0",
+    "images": "^3.0.1",
     "karma-webpack": "^2.0.4",
     "layout": "^2.2.0",
     "loader-utils": "^0.2.17",
     "lodash": "^4.17.4",
-    "rimraf": "^2.5.0",
     "node-sass": "^4.5.2",
+    "rimraf": "^2.5.0",
     "sass-loader": "^4.1.1",
     "scp2": "^0.5.0",
     "vue-loader": "^10.2.1",
